# codec-test-nau88c22

./: .gitignore  README.md  codec-test-nau88c22.kicad_pcb  codec-test-nau88c22.kicad_prl  codec-test-nau88c22.kicad_pro  codec-test-nau88c22.kicad_sch  codec-test-nau88c22.kicad_sym  docs.kibot.yml  fp-info-cache  sym-lib-table
.github/workflows/: firmware.yml  kibot.yml
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: i2s.rs  main.rs  test audio.raw
