[package]
edition = "2021"
name = "firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1.2"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
heapless = "0.8.0"
nau88c22 = { version = "0.9", features = ["defmt"] }
nb = "0.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.8"
rp2040-hal = { version = "0.9", features = ["eh1_0_alpha"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
